- Ability to render elements assigned to x-tag-group instead of tag - Display x-tag-group elements in navigation - fix word break in inline code elements

--- a/src/components/Layout/global.css
+++ b/src/components/Layout/global.css
@@ -1,32 +1,31 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 .blog-post a {
-    font-weight: 500;
-    color: #006db3;
+  font-weight: 500;
+  color: #006db3;
 }
 
-
 .gatsby-highlight-code-line {
-    background-color: #feb;
-    display: block;
-    margin-right: -1em;
-    margin-left: -1em;
-    padding-right: 1em;
-    padding-left: 0.75em;
-    border-left: 0.25em solid #f99;
+  background-color: #feb;
+  display: block;
+  margin-right: -1em;
+  margin-left: -1em;
+  padding-right: 1em;
+  padding-left: 0.75em;
+  border-left: 0.25em solid #f99;
 }
 /**
  * Add back the container background-color, border-radius, padding, margin
  * and overflow that we removed from <pre>.
  */
 .gatsby-highlight {
-    background-color: #272822;
-    border-radius: 0.3em;
-    margin: 0.5em 0;
-    padding: 1em;
-    overflow: auto;
+  background-color: #272822;
+  border-radius: 0.3em;
+  margin: 0.5em 0;
+  padding: 1em;
+  overflow: auto;
 }
 
 /**
@@ -37,12 +36,12 @@ html {
  * 3. Adjust the position of the line numbers
  */
 .gatsby-highlight pre[class*="language-"] {
-    background-color: transparent;
-    margin: 0;
-    padding: 0;
-    overflow: initial;
-    float: left; /* 1 */
-    min-width: 100%; /* 2 */
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  overflow: initial;
+  float: left; /* 1 */
+  min-width: 100%; /* 2 */
 }
 
 /**
@@ -51,112 +50,112 @@ html {
 
 /* Adjust the position of the line numbers */
 .gatsby-highlight pre[class*="language-"].line-numbers {
-    padding-left: 2.8em;
+  padding-left: 2.8em;
 }
 
 .gatsby-highlight pre[class*="language-"].line-numbers {
-    padding: 0;
-    padding-left: 2.8em;
-    overflow: initial;
+  padding: 0;
+  padding-left: 2.8em;
+  overflow: initial;
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-    padding: .2em;
-    border-radius: .3em;
-    white-space: normal;
+  padding: 0.12em;
+  border-radius: 0.3em;
+  white-space: normal;
 }
 
 blockquote {
-    display: block;
-    background: #fff;
-    padding: 15px 20px 15px 45px;
-    margin: 0 auto;
-    position: relative;
-    min-height: 64px;
-    /*Font*/
+  display: block;
+  background: #fff;
+  padding: 15px 20px 15px 45px;
+  margin: 0 auto;
+  position: relative;
+  min-height: 64px;
+  /*Font*/
 
-    font-family: Georgia, serif;
-    font-size: 16px;
-    line-height: 1.2;
-    color: #666;
-    text-align: justify;
-    /*Borders - (Optional)*/
+  font-family: Georgia, serif;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #666;
+  text-align: justify;
+  /*Borders - (Optional)*/
 
-    border-left: 15px solid #006db3;
-    border-right: 2px solid #006db3;
-    /*Box Shadow - (Optional)*/
+  border-left: 15px solid #006db3;
+  border-right: 2px solid #006db3;
+  /*Box Shadow - (Optional)*/
 
-    -moz-box-shadow: 2px 2px 15px #ccc;
-    -webkit-box-shadow: 2px 2px 15px #ccc;
-    box-shadow: 2px 2px 15px #ccc;
+  -moz-box-shadow: 2px 2px 15px #ccc;
+  -webkit-box-shadow: 2px 2px 15px #ccc;
+  box-shadow: 2px 2px 15px #ccc;
 }
 
 blockquote:before {
-    content: "\0021";
-    /*Unicode for Left Double Quote*/
-    /*Font*/
+  content: "\0021";
+  /*Unicode for Left Double Quote*/
+  /*Font*/
 
-    font-family: Georgia, serif;
-    font-size: 40px;
-    font-weight: bold;
-    color: #999;
-    /*Positioning*/
+  font-family: Georgia, serif;
+  font-size: 40px;
+  font-weight: bold;
+  color: #999;
+  /*Positioning*/
 
-    position: absolute;
-    left: 15px;
-    top: 5px;
+  position: absolute;
+  left: 15px;
+  top: 5px;
 }
 blockquote.notice:before {
-    content: "\0021";
-    /*Unicode for Exclamation mark*/
-    font-size: 50px;
-    left: 12px;
+  content: "\0021";
+  /*Unicode for Exclamation mark*/
+  font-size: 50px;
+  left: 12px;
 }
 blockquote.warning:before {
-    content: "\26A0";
-    /*Unicode for Warning*/
-    font-size: 36px;
-    left: 5px;
+  content: "\26A0";
+  /*Unicode for Warning*/
+  font-size: 36px;
+  left: 5px;
 }
 blockquote.quote:before {
-    content: "\201C";
-    /*Unicode for Info mark*/
-    font-size: 60px;
-    left: 10px;
+  content: "\201C";
+  /*Unicode for Info mark*/
+  font-size: 60px;
+  left: 10px;
 }
 blockquote:after {
-    /*Reset to make sure*/
+  /*Reset to make sure*/
 
-    content: "";
+  content: "";
 }
 
 blockquote cite {
-    color: #999999;
-    font-size: 14px;
-    display: block;
-    margin-top: 5px;
-    text-align: right;
+  color: #999999;
+  font-size: 14px;
+  display: block;
+  margin-top: 5px;
+  text-align: right;
 }
 
 blockquote a,
 blockquote a:link {
-    text-decoration: none;
-    background: #eee;
-    cursor: pointer;
-    padding: 0 3px;
-    color: #006db3;
+  text-decoration: none;
+  background: #eee;
+  cursor: pointer;
+  padding: 0 3px;
+  color: #006db3;
 }
 
 blockquote a:hover {
-    color: #666;
+  color: #666;
 }
 
 blockquote em {
-    font-style: italic;
+  font-style: italic;
 }
 
 blockquote cite:before {
-    content: "\2014 \2009";
-    /*  an em dash and a space before the text */
+  content: "\2014 \2009";
+  /*  an em dash and a space before the text */
 }
